--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,4 +1,1 @@
-# Vite Environment Variables
-
-# Backend API URL (set during build/deployment)
-VITE_API_URL=https://sora-backend-718161097168.asia-east1.run.app
+VITE_API_URL=https://sora-studio-718161097168.us-central1.run.app
