--- a/backend/package.json
+++ b/backend/package.json
@@ -33,7 +33,8 @@
     "@google-cloud/storage": "^7.7.0",
     "axios": "^1.6.2",
     "md5": "^2.3.0",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "@google/generative-ai": "^0.1.3"
   },
   "devDependencies": {
     "@types/uuid": "^9.0.7",
