--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,2 @@
-VITE_GOOGLE_API_KEY=AIzaSyDRdEV1tFZCYtTZ2nMj435TzsNycjJ2PCc
+VITE_GOOGLE_API_KEY=
+VITE_API_URL=https://sora-backend-qul5vdkegq-de.a.run.app
